# ksplice-ud

./: CHANGES  Makefile.am  Makefile.in  README  autogen.sh  build.sh  config.status  configure  configure.ac  configure.in  test32.asm  udis86.h
docs/: doc.html  index.html  style.css
libudis86/: Makefile.am  Makefile.in  Makefile.standalone  decode.c  decode.h  extern.h  input.c  input.h  itab.c  itab.h  macros.h  mnemonics.c  mnemonics.h  mnemonics.pl  opcmap.c  opcmap.h  opgen.py  source.c  source.h  syn-att.c  syn-intel.c  syn.c  syn.h  types.h  udis86.c  udis86.h  x86optable.xml  x86optable.xsl
tests/: Makefile  Makefile.am  Makefile.in  gen.c  randtest16.ref  randtest32.ref  randtest64.ref  test32.asm  test64.asm  testjmp.asm
udcli/: Makefile.am  Makefile.in  udcli.c
